KYLO-3248 [Refactoring] Performance - Method invokes inefficient Number constructor